--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ language: script
 env:
     matrix:
       - OS=el DIST=6
-      - OS=el DIST=7
+#     - OS=el DIST=7
 #      - OS=fedora DIST=24
 #      - OS=fedora DIST=25
 #      - OS=ubuntu DIST=trusty
