--- a/debian/rules
+++ b/debian/rules
@@ -16,9 +16,9 @@ LOCALIAS=/usr/share/locale/locale.alias
 
 override_dh_auto_configure:
 	dh_auto_configure -- --disable-rpath
-	touch --date="Jan 01 2000" \
-            doc/gawktexi.in doc/gawk.texi doc/gawkinet.texi \
-            doc/gawk.info doc/gawkinet.info doc/sidebar.awk
+	#touch --date="Jan 01 2000" \
+    #        doc/gawktexi.in doc/gawk.texi doc/gawkinet.texi \
+    #       doc/gawk.info doc/gawkinet.info doc/sidebar.awk
 
 override_dh_auto_test:
 	# Only run the testsuite if it's wanted.
