--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ env:
   - OS=el DIST=7
 script:
 - git submodule update --init --recursive
-- ls -ll
+- ls -a
 - git clone -b gawk-4.2.1 https://git.savannah.gnu.org/git/gawk.git
-- ls -ll
+- mv /gawk/* ./
+- ls -a
 - git clone https://github.com/packpack/packpack.git packpack
-- ls -ll
+- ls -a
 # - packpack/packpack
 # deploy:
 #   provider: bintray
