--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ script:
 - git submodule update --init --recursive
 - git clone -b gawk-4.2.1 https://git.savannah.gnu.org/git/gawk.git
 - cp -r gawk/* .
+- rm -rf gawk
 - git clone https://github.com/packpack/packpack.git packpack
+- ls -a
 - packpack/packpack
 deploy:
   provider: bintray
