--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ script:
 - git clone -b gawk-4.2.1 https://git.savannah.gnu.org/git/gawk.git
 - cp -r gawk/* .
 - rm -rf gawk
+- git add -A
 - git clone https://github.com/packpack/packpack.git packpack
 - ls -a
 - packpack/packpack
