--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
 - cp -r gawk/* .
 - rm -rf gawk
 - git add -A
+- git reset -- doc
 - git clone https://github.com/packpack/packpack.git packpack
 - ls -a
 - packpack/packpack
