--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ script:
 - cp -r gawk/* .
 - rm -rf gawk
 - git add -A
+- git tag -a 1.0.0
 - git clone https://github.com/packpack/packpack.git packpack
-- ls -a
 - packpack/packpack
 deploy:
   provider: bintray
