--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
 - cp -r gawk/* .
 - rm -rf gawk
 - git add -A
+- git tag -d 4.2.1
 - git tag -a 4.2.1 -m "4.2.1"
 - git clone https://github.com/packpack/packpack.git packpack
 - packpack/packpack
